<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/body_bg"
    android:orientation="vertical">

    <include layout="@layout/title_layout" />

    <LinearLayout
        android:id="@+id/login_layout"
        android:layout_width="match_parent"
        android:layout_height="@dimen/height_80"
        android:background="@android:color/holo_blue_dark"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/login_head_icon"
            android:layout_width="@dimen/height_50"
            android:layout_height="@dimen/height_50"
            android:layout_marginLeft="10.0dp"
            android:background="@mipmap/personal_head_ic" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10.0dp"
            android:layout_weight="1"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center_vertical"
                android:orientation="vertical">

                <TextView
                    style="@style/text_style_3"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center_vertical"
                    android:text="@string/login_click"
                    android:textColor="@android:color/white" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="center_vertical"
                    android:layout_weight="1"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/point"
                        style="@style/text_style_3"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/login_point"
                        android:textColor="@android:color/white" />

                    <TextView
                        android:id="@+id/check_in"
                        style="@style/text_style_3"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@drawable/edit_text_radius_transparent_bg"
                        android:text="@string/check_in"
                        android:textColor="@android:color/white" />

                    <TextView
                        android:id="@+id/share"
                        style="@style/text_style_3"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="10.0dp"
                        android:layout_marginRight="10.0dp"
                        android:background="@drawable/edit_text_radius_white_bg"
                        android:text="@string/share_five"
                        android:textColor="@android:color/holo_blue_dark" />
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/height_80"
        android:orientation="horizontal">

        <Button
            style="@style/text_style_3"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:background="@drawable/button_white_bg"
            android:drawableTop="@mipmap/personal_cabin"
            android:gravity="center"
            android:paddingTop="10.0dp"
            android:text="@string/shop_promotion" />

        <Button
            style="@style/text_style_3"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:background="@drawable/button_white_bg"
            android:drawableTop="@mipmap/headline"
            android:gravity="center"
            android:paddingTop="10.0dp"
            android:text="@string/today_headlines" />

        <Button
            style="@style/text_style_3"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:background="@drawable/button_white_bg"
            android:drawableTop="@mipmap/personal_jobs_ic"
            android:gravity="center"
            android:paddingTop="10.0dp"
            android:text="@string/integral_jobs" />

        <Button
            style="@style/text_style_3"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:background="@drawable/button_white_bg"
            android:drawableTop="@mipmap/tenancy"
            android:gravity="center"
            android:paddingTop="10.0dp"
            android:text="@string/tenancy" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/height_80"
        android:orientation="horizontal">

        <Button
            style="@style/text_style_3"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:background="@drawable/button_white_bg"
            android:drawableTop="@mipmap/personal_job_ic"
            android:gravity="center"
            android:paddingTop="10.0dp"
            android:text="@string/high_paying_jobs" />

        <Button
            android:id="@+id/button"
            style="@style/text_style_3"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:background="@drawable/button_white_bg"
            android:drawableTop="@mipmap/personal_dukan"
            android:gravity="center"
            android:paddingTop="10.0dp"
            android:text="@string/personal_dukan" />

        <Button
            style="@style/text_style_3"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:background="@drawable/button_white_bg"
            android:drawableTop="@mipmap/personal_gift_ic"
            android:gravity="center"
            android:paddingTop="10.0dp"
            android:text="@string/integral_mall" />

        <Button
            style="@style/text_style_3"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:background="@drawable/button_white_bg"
            android:drawableTop="@mipmap/personal_happy_time"
            android:gravity="center"
            android:paddingTop="10.0dp"
            android:text="@string/personal_happy_time" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/me_timely_reminders"
        android:layout_width="match_parent"
        android:layout_height="@dimen/height_50"
        android:background="@drawable/button_white_bg"
        android:gravity="center_vertical"
        android:layout_marginTop="10.0dp">
       <ImageView android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:layout_marginLeft="10.0dp"/>
        <TextView android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            style="@style/text_style_3"
            android:text="@string/me_timely_reminders"
            android:layout_marginLeft="10.0dp"/>
        <ImageView android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@mipmap/right_jian2"
            android:layout_marginRight="10.0dp"/>
    </LinearLayout>

</LinearLayout>