<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/body_bg">

    <include layout="@layout/title_layout" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:background="@android:color/white"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/change"
            android:layout_width="@dimen/height_40"
            android:layout_height="@dimen/height_40"
            android:background="@mipmap/huancheng_left"
            android:layout_marginLeft="10.0dp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10.0dp"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/location_me_layout"
                android:layout_width="match_parent"
                android:layout_height="@dimen/height_50"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="@dimen/height_40"
                    android:layout_height="@dimen/height_40"
                    android:src="@mipmap/huancheng_me"
                    android:scaleType="center"/>
                <TextView android:id="@+id/location_me"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    style="@style/text_style_3"
                    android:text="@string/location_me"
                    android:layout_weight="1"/>
                <TextView android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    style="@style/text_style_3"
                    android:textColor="@android:color/holo_blue_dark"
                    android:text="@string/select_location"
                    android:layout_marginRight="10.0dp"/>
            </LinearLayout>

            <View style="@style/line_style_col_dark"/>

            <LinearLayout
                android:id="@+id/location_from_layout"
                android:layout_width="match_parent"
                android:layout_height="@dimen/height_50"
                android:gravity="center"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="@dimen/height_40"
                    android:layout_height="@dimen/height_40"
                    android:src="@mipmap/empty_red"
                    android:id="@+id/imageView"
                    android:scaleType="center"/>

                <TextView android:id="@+id/location_from"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    style="@style/text_style_3"
                    android:text="@string/location_from"
                    android:layout_weight="1"/>
                <TextView android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    style="@style/text_style_3"
                    android:textColor="@android:color/holo_blue_dark"
                    android:text="@string/select_location"
                    android:layout_marginRight="10.0dp"/>
            </LinearLayout>
        </LinearLayout>


    </LinearLayout>
    <View android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@android:color/white"
        android:layout_marginTop="10.0dp"/>
</LinearLayout>